--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,11 @@
     list-style: none;
 
 }
+table,
+th ,td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+    color: red;
+}
+
