--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
+    margin: 0px;
+    box-sizing: border-box;
     text-decoration: none;
     list-style: none;
+
 }
